# opentelemetry-python-contrib

./: pyproject.toml  repro.py  tox.ini
adk-sql-agent/: Dockerfile  README.md  main.env  main.py  pyproject.toml  run.sh
adk-sql-agent/image_describer_agent/: .env  agent.py
adk-sql-agent/sql_agent/: agent.py  tools.py
instrumentation-genai/opentelemetry-instrumentation-google-genai/: pyproject.toml
instrumentation-genai/opentelemetry-instrumentation-google-genai/src/opentelemetry/instrumentation/google_genai/: generate_content.py  message.py  message_models.py  otel_wrapper.py  uploader.py
instrumentation-genai/opentelemetry-instrumentation-google-genai/tests/: conftest.py
instrumentation-genai/opentelemetry-instrumentation-google-genai/tests/common/: otel_assertions.py
instrumentation-genai/opentelemetry-instrumentation-google-genai/tests/generate_content/: test_sync_nonstreaming_vcr.py
instrumentation-genai/opentelemetry-instrumentation-google-genai/tests/generate_content/cassettes/: test_genai_system_gemini.yaml  test_genai_system_vertex.yaml  test_span.yaml  test_system_prompt.yaml  test_token_counts.yaml
instrumentation-genai/opentelemetry-instrumentation-vertexai/: CHANGELOG.md
instrumentation-genai/opentelemetry-instrumentation-vertexai-v2/example/: main.py
instrumentation-genai/opentelemetry-instrumentation-vertexai-v2/tests/: conftest.py  test_gemini.py
instrumentation-genai/opentelemetry-instrumentation-vertexai-v2/tests/cassettes/: test_vertexai_generate_content.yaml
instrumentation-genai/opentelemetry-instrumentation-vertexai/examples/langgraph-chatbot-demo/: Dockerfile  README.md  app.yaml  chatbot.py  docker-compose.yaml  otel-collector-config.yaml  pyproject.toml  run_streamlit.py  run_streamlit_local.py
instrumentation-genai/opentelemetry-instrumentation-vertexai/examples/langgraph-chatbot-demo/src/langgraph_chatbot_demo/: _streamlit_helpers.py  chat_with_search.py  langchain_history.py  patched_vertexai.py  run_streamlit.py
instrumentation-genai/opentelemetry-instrumentation-vertexai/src/opentelemetry/instrumentation/vertexai/: __init__.py  patch.py  utils.py
instrumentation-genai/opentelemetry-instrumentation-vertexai/tests/: test_function_calling.py  test_stream_chat_completions.py
instrumentation-genai/opentelemetry-instrumentation-vertexai/tests/cassettes/: test_generate_content_all_events.yaml  test_stream_generate_content_long.yaml  test_tool_events_breakthings.yaml
instrumentation/opentelemetry-instrumentation-grpc/src/opentelemetry/instrumentation/grpc/: _client.py
instrumentation/opentelemetry-instrumentation-grpc/tests/: test_client_interceptor.py  test_client_interceptor_filter.py
util/opentelemetry-util-genai/: pyproject.toml  test-requirements.txt
util/opentelemetry-util-genai/src/opentelemetry/util/genai/: utils.py
util/opentelemetry-util-genai/src/opentelemetry/util/genai/_fsspec_upload/: fsspec_hook.py
util/opentelemetry-util-genai/src/opentelemetry/util/genai/_upload/: completion_hook.py
util/opentelemetry-util-genai/tests/: test_fsspec_upload.py  test_upload.py  test_utils.py
