[project]
name = "langgraph-chatbot-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.3.31",
    "langchain-google-vertexai>=2.0.7",
    "langgraph>0.2.27",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-vertexai",
]

[tool.uv.sources]
opentelemetry-instrumentation-vertexai = { git = "https://github.com/aabmass/opentelemetry-python-contrib.git", subdirectory = "instrumentation-genai/opentelemetry-instrumentation-vertexai", branch = "vertex-langgraph" }

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]
